add swagger auth
